testdata/fixtures/audit/positive/client_only_validation_report_validity_ts.ts
function onSubmit(form: HTMLFormElement): void {
  if (!form.reportValidity()) {
    return;
  }
  fetch("/api/submit", { method: "POST" });
}
