testdata/fixtures/audit/negative/client_only_validation_neg_unrelated_method_ts.ts
// unrelated member-call, not checkValidity/reportValidity — must not fire
function focusField(input: HTMLInputElement): void {
  input.focus();
}
